<resources>
    <string name="app_name">AHA Shiva Vishnu Temple</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="om_image">Om Image</string>

    <string-array name="drawer_items">
        <item>Home</item>
        <item>About Us</item>
        <item>Upcoming Events</item>
        <item>Make A Donation</item>
        <item>Contact Us</item>
        <item>Developer</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="about_us">About Us</string>
    <string name="aha_title">American Hindu Association</string>
    <string name="our_vision">Our Vision</string>
    <string name="our_mission">Our Mission</string>
    <string name="volunteering">Volunteering at AHA</string>

    <string name="contact_us">Contact Us</string>
    <string name="temple_cultural_center"><![CDATA[Hindu Temple & Cultural Center of Wisconsin]]></string>
    <string name="aha_address_line_1">2138 South Fish Hatchery Road</string>
    <string name="aha_address_line_2">Fitchburg, WI 53575</string>
    <string name="directions">Directions</string>
    <string name="call">Call</string>
    <string name="email">Email</string>
    <string name="visit_website">Visit Website</string>

    <string name="upcoming_events">Upcoming Events</string>

    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="contact_name">Contact Name:</string>
    <string name="contact_phone">Contact Phone:</string>
    <string name="contact_email">Contact Email:</string>
    <string name="add_event_to_google_calendar">Add Event to Google Calendar</string>
    <string name="view_event_details">View Event Details</string>
    <string name="title_activity_pdf_viewer">PdfViewerActivity</string>
    <string name="welcome">Welcome!</string>
    <string name="developer">Developed by Navneet Shivam Reddy</string>
    <string name="make_a_donation">Make a Donation</string>
    <string name="navneet_reddy">Navneet Reddy</string>
    <string name="email_navneet">Email Navneet</string>
    <string name="linkedin_navneet">linkedin.com/in/navneetreddy</string>
    <string name="github_navneet">github.com/navneetreddy</string>
    <string name="navneet_picture">Navneet\'s Picture</string>
    <string name="about_navneet">About Navneet</string>
    <string name="expanded_image">Expanded Image</string>
    <string name="degree">B.S. Computer Sciences</string>
    <string name="school">UW Madison</string>
    <string name="call_contact_button">Call Contact Button</string>
    <string name="email_contact_button">Email Contact Button</string>
    <string name="app_name_display">AHA</string>
    <string name="about_the_developer">About the Developer</string>
    <string name="linkedin_button">LinkedIn Button</string>
    <string name="github_button">GitHub Button</string>
    <string name="title_activity_pdfviewer">PDFViewerActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="report_a_bug">Report a Bug</string>
    <string name="email_button">Email Button</string>
</resources>