<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:outline="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_margin"
    tools:context="com.navneetreddy.ahashivavishnutemple.ContactUsFragment" >

    <com.navneetreddy.ahashivavishnutemple.OutlineTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="@dimen/layout_margin"
        android:paddingBottom="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        android:text="@string/contact_us"
        android:id="@+id/contactUsTitle"
        outline:strokeColor="@color/blanched_almond"
        outline:strokeJoinStyle="miter"
        outline:strokeWidth="1dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/rounded_corners"
                android:padding="@dimen/layout_margin" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/temple_cultural_center"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:gravity="center"
                    android:text="@string/aha_title" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:gravity="center"
                    android:text="@string/aha_address_line_1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:gravity="center"
                    android:text="@string/aha_address_line_2" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_corners"
                android:layout_marginTop="@dimen/layout_margin"
                android:layout_marginBottom="@dimen/layout_margin"
                android:padding="@dimen/layout_margin"
                android:text="@string/directions"
                android:id="@+id/directionsButton" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_corners"
                android:layout_marginBottom="@dimen/layout_margin"
                android:padding="@dimen/layout_margin"
                android:text="@string/call"
                android:id="@+id/phoneButton" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_corners"
                android:layout_marginBottom="@dimen/layout_margin"
                android:padding="10dp"
                android:text="@string/email"
                android:id="@+id/emailButton" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_corners"
                android:layout_marginBottom="@dimen/layout_margin"
                android:padding="10dp"
                android:text="@string/visit_website"
                android:id="@+id/websiteButton" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_corners"
                android:layout_marginBottom="@dimen/layout_margin"
                android:padding="@dimen/layout_margin"
                android:text="@string/meet_the_developer"
                android:id="@+id/aboutDeveloperButton" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>