<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.navneetreddy.ahashivavishnutemple.AboutDeveloperFragment" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="@dimen/layout_margin"
        android:id="@+id/navneetFragmentLinearLayout" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10" >

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="4"
                android:clickable="true"
                android:scaleType="fitCenter"
                android:background="@color/transparent"
                android:id="@+id/navneetPicture"
                android:contentDescription="@string/navneet_picture" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/layout_margin"
                android:layout_marginBottom="@dimen/layout_margin"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginEnd="5dp"
                android:layout_weight="6"
                android:background="@drawable/rounded_corners" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/navneet_reddy"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/degree"
                    android:textSize="@dimen/text_size_developer_page" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/school"
                    android:textSize="@dimen/text_size_developer_page" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_alignParentBottom="true"
                android:id="@+id/imageButtons" >

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/rounded_corners_transparent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold"
                    android:id="@+id/navneetEmailButton"
                    android:text="@string/email_navneet" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_above="@+id/navneetEmailButton"
                    android:weightSum="2" >

                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:scaleType="fitEnd"
                        android:background="@color/transparent"
                        android:id="@+id/linkedinImageButton"
                        android:contentDescription="@string/linkedin_button" />

                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:scaleType="fitEnd"
                        android:background="@color/transparent"
                        android:id="@+id/githubImageButton"
                        android:contentDescription="@string/github_button" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:layout_alignParentTop="true"
                android:layout_above="@+id/imageButtons"
                android:background="@drawable/rounded_corners" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/about_navneet" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/navneetDescription" />

                </ScrollView>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/navneetExpandedImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:padding="@dimen/layout_margin"
        android:visibility="invisible"
        android:contentDescription="@string/expanded_image" />

</FrameLayout>