<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:outline="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    tools:context="com.example.navneetreddy.ahashivavishnutemple.AboutUsFragment">

    <com.example.navneetreddy.ahashivavishnutemple.OutlineTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        android:text="@string/about_us"
        android:id="@+id/aboutUsTitle"
        outline:strokeColor="@color/white"
        outline:strokeJoinStyle="miter"
        outline:strokeWidth="1dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/blanched_almond"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/aha_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="5dp"
                android:id="@+id/aboutUsAHA" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/our_vision" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="5dp"
                android:textStyle="italic"
                android:id="@+id/aboutUsVision" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/our_mission" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="5dp"
                android:id="@+id/aboutUsMission" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/volunteering" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="5dp"
                android:id="@+id/aboutUsVolunteering" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>